@@ -20,29 +20,7 @@ zeit.cms.LightboxForm = Class.extend({
         var d = this.lightbox.load_url(url);
         d.addCallback(
             function(result) {
-                // Change all submits to buttons to be able to handle them in
-                // java script
-                forEach(
-                    getElementsByTagAndClassName(
-                        'input', 'button', othis.content_box),
-                    function(button) {
-                        button.type = 'button';
-                    });
-                othis.form = $('lightbox.form');
-                if (othis.form != null) {
-                    connect(othis.form, 'onsubmit', function(event) {
-                        // prevent accidential submit
-                        event.stop()
-                    });
-                }
-                
-                // check for javascript
-                forEach(
-                    getElementsByTagAndClassName('SCRIPT', null,
-                                                 othis.content_box),
-                    function(script) {
-                        eval(script.text);
-                    });
+                othis.post_process_html();
                 return result;
             });
 
@@ -54,11 +32,8 @@ zeit.cms.LightboxForm = Class.extend({
             return
         if (target.type != 'button')
             return
-        if (target.name.indexOf('form.actions.') == 0) {
-            this.handle_submit(target.name);
-            event.stop();
-        }
-
+        this.handle_submit(target.name);
+        event.stop();
     },
 
     handle_submit: function(action) {
@@ -71,8 +46,10 @@ zeit.cms.LightboxForm = Class.extend({
             }, this.form.elements);
 
         var data = map(function(element) {
-                if (element.type == 'radio' && !element.checked)
+                if ((element.type == 'radio' || element.type == 'checkbox')
+                    && !element.checked) {
                     return
+                }
                 return element.name + "=" + encodeURIComponent(element.value)
             }, elements);
         data.push(action + '=clicked')
@@ -90,15 +67,23 @@ zeit.cms.LightboxForm = Class.extend({
         d.addCallbacks(
             function(result) {
                 othis.content_box.innerHTML = result.responseText;
+                if (action.indexOf('form.actions.') != 0) {
+                    // This was no action. No error could have been generated.
+                    // Also the form is not done, yet.
+                    return result;
+                }
                 var errors = getFirstElementByTagAndClassName(
                     'ul', 'errors', othis.content_box)
-                if (errors != null)
-                    return;
+                if (errors != null) {
+                    return result;
+                }
                 var next_url_node = getFirstElementByTagAndClassName(
                     'span', 'nextUrl', othis.content_box);
-                if (next_url_node == null)
-                    return
+                if (next_url_node == null) {
+                    return result;
+                }
                 window.location = next_url_node.textContent;
+                return null;
             },
             function(error) {
                 logError(error.req.status, error.req.statusText);
@@ -107,6 +92,13 @@ zeit.cms.LightboxForm = Class.extend({
                     error.req.responseText, "text/xml");
                 document.firstChild.nextSibling.innerHTML = doc.firstChild.nextSibling.innerHTML;
             });
+        d.addCallback(function(result) {
+            if (result === null) {
+                return null;
+            }
+            othis.post_process_html();
+            return result;
+        });
     },
 
     loading: function(message) {
@@ -114,6 +106,35 @@ zeit.cms.LightboxForm = Class.extend({
             message = 'Loading ...';
         }
         this.content_box.innerHTML = 'Loading ...';
+    },
+
+    post_process_html: function() {
+        var othis = this;
+        // Change all submits to buttons to be able to handle them in
+        // java script
+        forEach(
+            getElementsByTagAndClassName(
+                'input', null, othis.content_box),
+            function(button) {
+                if (button.type == 'submit') {
+                    button.type = 'button';
+                }
+            });
+        othis.form = $('lightbox.form');
+        if (othis.form != null) {
+            connect(othis.form, 'submit', function(event) {
+                // prevent accidential submit
+                event.stop()
+            });
+        }
+        
+        // check for javascript
+        forEach(
+            getElementsByTagAndClassName('SCRIPT', null,
+                                         othis.content_box),
+            function(script) {
+                eval(script.text);
+            });
     },
 
 });
