@@ -7,6 +7,8 @@ zeit.cms changes
 - WYSIWYG-Editor: Formular für das Hinzufügen und Bearbeiten von Videos;
   unterstützen des <video>-Tags incl. expires-Attribut.
 - WYSIWYG-Editor: Aktion für das Hinzufügen eines Mail-Formulars.
+- Lightbox-Formulare: Nach dem ersten Submit wurden die Handler nicht
+  aufgesetzt, so dass ein zweiter Submit nicht (korrekt) funktionierte.
 
 1.2.7 (2008-11-10)
 ------------------
